# microservice/gateway/handler/post/listMyPost.go
@@ -1,0 +1,38 @@
+package post
+
+import (
+	"context"
+	. "forum-gateway/handler"
+	"forum-gateway/service"
+	"forum-gateway/util"
+	pb "forum-post/proto"
+	"forum/log"
+	"github.com/gin-gonic/gin"
+	"go.uber.org/zap"
+)
+
+// ListMyPost ... 获取我发布的帖子
+// @Summary list 我发布的帖子 api
+// @Tags post
+// @Accept application/json
+// @Produce application/json
+// @Param Authorization header string true "token 用户令牌"
+// @Success 200 {object} []post.Post
+// @Router /post/my/list [get]
+func (a *Api) ListMyPost(c *gin.Context) {
+	log.Info("Post ListMainPost function called.", zap.String("X-Request-Id", util.GetReqID(c)))
+
+	userId := c.MustGet("userId").(uint32)
+
+	listReq := &pb.Request{
+		UserId: userId,
+	}
+
+	postResp, err := service.PostClient.ListUserCreatedPost(context.TODO(), listReq)
+	if err != nil {
+		SendError(c, err, nil, "", GetLine())
+		return
+	}
+
+	SendResponse(c, nil, postResp.Posts)
+}
